tests/ui/type-inference/or_else-multiple-type-params.stderr
error[E0282]: type annotations needed for `Result<Child, _>`
  --> $DIR/or_else-multiple-type-params.rs:7:18
   |
LL |         .or_else(|err| {
   |                  ^^^^^
   |
   = note: the type must also implement `Debug`
help: try giving this closure an explicit return type
   |
LL |         .or_else(|err| -> Result<_, F> {
   |                        +++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
